# staratlas-holosim-hackr

./: .env.sample  .gitignore  CLAUDE.md  Cargo.toml  NOTES.md  QUESTS.md  README.md  index.ts  justfile  package.json
apps/: README.md  run-tui.sh  run-viz.sh
apps/holosim-tui/: Cargo.toml
apps/holosim-tui/src/: app.rs  data.rs  main.rs
apps/holosim-viz/: Cargo.toml  README.md
apps/holosim-viz/src/: camera.rs  data.rs  input.rs  main.rs  ui.rs
apps/holosim-viz/src/render/: grid.rs  interaction.rs  minimap.rs  mod.rs  origin.rs  sector_modal.rs  sectors.rs  starbases.rs  ui.rs  utils.rs
crates/hackr-gamedata/: Cargo.toml  README.md
crates/hackr-gamedata/src/: config.rs  game_balance.rs  lib.rs  main.rs
crates/hackr-ixproc/: .env.example  Cargo.toml  README.md
crates/hackr-ixproc/src/: config.rs  database.rs  main.rs  processor.rs  solana_monitor.rs
crates/hackr-saproc/: .env.example  Cargo.toml  README.md
crates/hackr-saproc/src/: config.rs  database.rs  discriminator.rs  main.rs  parser.rs
crates/ui-holosim/: Cargo.toml  README.md
crates/ui-holosim/src/: fleet.rs  fleet_ships.rs  game.rs  game_state.rs  lib.rs  loot.rs  mine_item.rs  planet.rs  resource.rs  sage_player_profile.rs  sector.rs  ship.rs  star.rs  starbase.rs
docs/: database-schema.md  database-schema.sql
gamedata/: README.md  game_balance_GAMEC7U7cqmFFaRow33j1LwuV8u4YhAS1mJ5Dqjnar2k.json  game_balance_GAMEC7U7cqmFFaRow33j1LwuV8u4YhAS1mJ5Dqjnar2k.ron  game_balance_GAMEC7U7cqmFFaRow33j1LwuV8u4YhAS1mJ5Dqjnar2k_metadata.json
gamedata/GAMEC7U7cqmFFaRow33j1LwuV8u4YhAS1mJ5Dqjnar2k/: game_balance.ron  game_balance_metadata.json
holosim-examples/: Cargo.toml
holosim-examples/examples/: 00_get_transaction.rs  ch2_get_accounts.rs  ch2_pubsub_accounts.rs  ch3_create_profile.rs
programs/c4_sage/: Cargo.toml
programs/c4_sage/src/: lib.rs
programs/holosim/: Cargo.toml  SAgEeT8u14TE69JXtanGSgNkEdoPUcLabeyZD2uw8x9-idl.json  SAgeTraQfBMdvGVDJYoEvjnbq5szW7RJPi6obDTDQUF-idl.json  codamaIDL.json
programs/holosim/src/: lib.rs
programs/player_profile/: Cargo.toml  codamaIDL.json
programs/player_profile/src/: lib.rs
programs/profile_faction/: Cargo.toml  codamaIDL.json
programs/profile_faction/src/: lib.rs
scripts/: createCodamaIDL.ts  generateCode.ts
