[workspace]
resolver = "3"
members = [ "holosim-examples","programs/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
# main
staratlas-holosim = { path = "programs/holosim" }
staratlas-player-profile = { path = "programs/player_profile" }
staratlas-profile-faction = { path = "programs/profile_faction" }

# solana
solana-account-decoder = "2.2"
solana-account-info = "2.2"
solana-client = "2.2"
solana-cpi = "2.2"
solana-instruction = "2.2"
solana-program = "2.2"
solana-program-error = "2.2"
solana-pubkey = "2.2"
solana-sdk = "2.2"

# other
anyhow = "1.0"
borsh = "1.5"
dotenv = "0.15"
envy = "0.4"
futures-util = "0.3"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0"
serde_with = "3.12"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
