[package]
name = "holosim-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Data handling
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI state management
tui-input = "0.10"
tui-textarea = "0.6"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system
dirs = "5.0"

# Import UI types
ui-holosim = { path = "../../crates/ui-holosim" }

