[package]
name = "hackr-gamedata"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hackr-gamedata"
path = "src/main.rs"

[dependencies]
# Star Atlas workspace crates
ui-holosim = { path = "../ui-holosim" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"

# Configuration & logging
dotenv = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Async
tokio = { version = "1.45", features = ["full"] }

# Other
chrono = { version = "0.4", features = ["serde"] }