[package]
name = "hackr-ixproc"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hackr-ixproc"
path = "src/main.rs"

[dependencies]
# Async runtime & web
tokio = { version = "1.45", features = ["full"] }
actix-web = { version = "4.11", features = ["macros"] }

# Solana integration
solana-client = "2.2"
solana-pubsub-client = "2.2"
solana-sdk = "2.2"
solana-transaction-status = "2.2"
solana-account-decoder = "2.2"

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration & logging
dotenv = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Other
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }