[package]
name = "hackr-saproc"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hackr-saproc"
path = "src/main.rs"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Star Atlas workspace crates
staratlas-holosim = { path = "../../programs/holosim" }
staratlas-player-profile = { path = "../../programs/player_profile" }
staratlas-profile-faction = { path = "../../programs/profile_faction" }

# Solana
solana-sdk = "2.2"
solana-account-decoder = "2.2"

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"

# Configuration & logging
dotenv = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Other
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.45", features = ["full"] }
hex = "0.4"
sha2 = "0.10"