[package]
name = "ui-holosim"
version.workspace = true
edition.workspace = true

[dependencies]
# Star Atlas workspace crates
staratlas-holosim = { path = "../../programs/holosim" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana
solana-sdk = "2.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Other
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"