[package]
name = "staratlas-holosim"
version.workspace = true
edition.workspace = true

[features]
default = []
serde = []
fetch = []
anchor = []
anchor-idl-build = []

[dependencies]
borsh.workspace = true
num-derive.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_with.workspace = true
solana-account-info.workspace = true
solana-cpi.workspace = true
solana-instruction.workspace = true
solana-program.workspace = true
solana-program-error.workspace = true
solana-pubkey.workspace = true
thiserror.workspace = true
