[package]
name = "staratlas-profile-faction"
version.workspace = true
edition.workspace = true

[features]
default = []
serde = []
fetch = []
anchor = []
anchor-idl-build = []

[dependencies]
borsh.workspace = true
num-derive.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_with.workspace = true
solana-program.workspace = true
thiserror.workspace = true
